bugfix — planned & header on top (z-index 2)

--- a/razv4_0/static/razvozki4_0/css/header.css
+++ b/razv4_0/static/razvozki4_0/css/header.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     padding-top: 10px;
     padding-bottom: 10px;
+    z-index: 2;
 
 }
 
