--- a/razv4_0/static/razvozki4_0/css/main.css
+++ b/razv4_0/static/razvozki4_0/css/main.css
@@ -158,6 +158,7 @@ input[type=checkbox] {
     max-height: 190px;
     overflow: hidden;
     background-color: #fff;
+    z-index: 2;
 }
 
 .table-container {
